CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

PROJECT(openni_grabber)

FIND_PACKAGE(PCL 1.2 REQUIRED)

INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})
ADD_DEFINITIONS(${PCL_DEFINITIONS})
ADD_DEFINITIONS(-pthread -std=c++11)

INCLUDE_DIRECTORIES("./include")

ADD_EXECUTABLE(main main.cpp feature.cpp filter.cpp meshing.cpp registration.cpp segmentation.cpp visualization.cpp)
TARGET_LINK_LIBRARIES(main ${PCL_LIBRARIES})

IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
ENDIF()